miniextendr-macros/tests/ui/fn_implicit_dots_name_conflict.stderr
error: parameter named `_dots` conflicts with implicit dots parameter; use named dots like `my_dots: ...` instead
 --> tests/ui/fn_implicit_dots_name_conflict.rs:4:25
  |
4 | pub fn conflicting_name(_dots: i32, ...) -> i32 {
  |                         ^^^^^

warning: missing pattern for `...` argument
 --> tests/ui/fn_implicit_dots_name_conflict.rs:4:37
  |
4 | pub fn conflicting_name(_dots: i32, ...) -> i32 {
  |                                     ^^^
  |
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #145544 <https://github.com/rust-lang/rust/issues/145544>
  = note: `#[warn(varargs_without_pattern)]` (part of `#[warn(future_incompatible)]`) on by default
help: name the argument, or use `_` to continue ignoring it
  |
4 | pub fn conflicting_name(_dots: i32, _: ...) -> i32 {
  |                                     ++
